Fix offset for dropdown header in new short header on mobile

--- a/source/scss/_application.scss
+++ b/source/scss/_application.scss
@@ -499,7 +499,7 @@ nav#primary
     display: none;
     left: 0;
     position: absolute;
-    top: 4.25rem;
+    top: 3rem;
 
     @media only screen and (min-width: 750px) {
         background: none;
